<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"

    tools:context=".EditContact">


    <TextView
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/edit_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/add_firstname_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle" />


    <EditText
        android:id="@+id/editLastName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/add_lastname_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFirstName" />

    <RelativeLayout
        android:id="@+id/emailbox"
        android:layout_width="200dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@+id/editLastName"

    >

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/add_email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageButton
            android:id="@+id/editEmailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/editEmail"
            android:src="@android:drawable/sym_action_email"
            app:layout_constraintBottom_toBottomOf="@+id/editEmail"
            app:layout_constraintStart_toEndOf="@+id/editEmail" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/phoneBox"
        android:layout_width="200dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@+id/emailbox">

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="1500dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/add_phone_hint"


            android:inputType="phone" />


        <ImageButton
            android:id="@+id/editPhoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            android:layout_toEndOf="@+id/editPhone"
            android:src="@android:drawable/stat_sys_phone_call"
            app:layout_constraintBottom_toBottomOf="@+id/editPhone"
            app:layout_constraintStart_toEndOf="@+id/editPhone" />
    </RelativeLayout>

    <Button
        android:id="@+id/editSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/edit_save_button"
        app:layout_constraintBottom_toBottomOf="@+id/phoneBox" />

</LinearLayout>